yun xing dan zhe ke neng hen nan shi xian li ru ju yi wei zhi jie liao jie gai mo xing de ren shi

--- a/client.htm
+++ b/client.htm
@@ -279,16 +279,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-4-node-share.htm" title="梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月4日21.2M/S|免费Shadowrocket/Clash/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-6-clash-verge-rev-github.htm" title="梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月6日18.8M/S|免费Clash/Shadowrocket/V2ray/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-8-node-share.htm" title="梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月8日22.5M/S|免费Clash/Shadowrocket/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151890.htm" title="如何配置Vmess协议：完整的使用与优化指南">如何配置Vmess协议：完整的使用与优化指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-20-clash-verge-rev-github.htm" title="梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月20日20M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
                         <li class="py-2"><a href="/news/article-149099.htm" title="突破连接限制：全方位解决Clash机场设备过多难题">突破连接限制：全方位解决Clash机场设备过多难题</a></li>
-                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
-                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-24-clash-verge-rev-nodes.htm" title="梯子机场 - 7月24日19.8M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月24日19.8M/S|免费V2ray/Shadowrocket/SSR/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-16-clash-verge-rev-nodes.htm" title="梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 8月16日22.4M/S|免费Clash/V2ray/SSR/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -300,13 +300,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
