--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -527,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-14-clash-node-github.htm" title="梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月14日19M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-149376.htm" title="全面攻克Clash订阅更新失败：从诊断到预防的完整指南">全面攻克Clash订阅更新失败：从诊断到预防的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-147673.htm" title="深入探索Clash官方网站：从入门到精通的全方位使用指南">深入探索Clash官方网站：从入门到精通的全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-150126.htm" title="美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南">美区Quantumult下架风波：网络自由与监管博弈下的用户生存指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-9-clash-stash.htm" title="梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐">梯子机场 - 8月9日18.7M/S|免费V2ray/SSR/Shadowrocket/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-21-clash-stash-node.htm" title="梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月21日18.4M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-clash-verge-rev-nodes.htm" title="梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月11日18.1M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-clash-v2ray-ss-ssr.htm" title="梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐">梯子机场 - 7月8日19.3M/S|免费SSR/Shadowrocket/V2ray/Clash节点推荐，VPN节点购买推荐</a></li>
-                        <li class="py-2"><a href="/news/article-148667.htm" title="解锁游戏新境界：PS4上部署V2RayNG的全方位指南">解锁游戏新境界：PS4上部署V2RayNG的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-21-clash-stash-node.htm" title="梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐">梯子机场 - 7月21日21.3M/S|免费SSR/Clash/V2ray/Shadowrocket节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-149862.htm" title="解密Clash：从全名解析到精通配置的科学上网指南">解密Clash：从全名解析到精通配置的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-153329.htm" title="突破网络边界：贴吧自由访问的全方位科学上网指南">突破网络边界：贴吧自由访问的全方位科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-148374.htm" title="群晖路由器：解锁网络自由的智能网关">群晖路由器：解锁网络自由的智能网关</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-17-clash-node-github.htm" title="梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月17日18.7M/S|免费Shadowrocket/Clash/SSR/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-7-free-node-subscribe.htm" title="梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月7日21.9M/S|免费Clash/SSR/Shadowrocket/V2ray节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/news/article-151533.htm" title="Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验">Kali科学上网浏览器全方位使用指南：打造安全高速的翻墙上网体验</a></li>
+                        <li class="py-2"><a href="/news/article-152229.htm" title="手机科学上网全攻略：解锁网络自由与安全新境界">手机科学上网全攻略：解锁网络自由与安全新境界</a></li>
+                        <li class="py-2"><a href="/news/article-147422.htm" title="水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧">水下角斗场：揭秘鱼类冲突背后的生存博弈与生态智慧</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-15-clash-node-github.htm" title="梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐">梯子机场 - 8月15日21.6M/S|免费Clash/V2ray/Shadowrocket/SSR节点推荐，VPN节点购买推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-12-clash-stash.htm" title="梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐">梯子机场 - 8月12日20.4M/S|免费Shadowrocket/SSR/Clash/V2ray节点推荐，VPN节点购买推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -548,13 +548,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">32</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
